# StudyRoom_bot

./: .gitignore  README.md  bot.py  discloud.config  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: python-app.yml
backend/: main.py
cogs/: role_manager.py  stats.py  vc_tracker.py
data/: vc_logs copy.csv  vc_logs.csv  vc_logs_stash.csv
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: MonthlyReport.jsx  RankingChart.jsx  TodayUsageChart.jsx  TotalUsageChart.jsx  WeeklyUsageChart.jsx
frontend/src/config/: channelColors.json
utils/: helpers.py
