[tool.poetry]
name = "discord-study-bot"
version = "0.1.0"
description = ""
authors = ["tattowa <junwookim2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
discord = "^2.3.2"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
japanize-matplotlib = "^1.1.3"
seaborn = "^0.13.2"
setuptools = "^75.8.2"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
